--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -122,13 +122,13 @@
 }
 
 #restaurants-star1 {
-	font-size: 6em;
+	font-size: 5em;
 	width: 100%;
 	height: 100%;
 	line-height: 30px;
 	background-color: white;
 	border: white;
-	color: #fef01b;
+	color: #e8dd3c;
 	cursor: pointer;
 }
 
@@ -139,7 +139,7 @@
 	line-height: 30px;
 	border: white;
 	background-color: white;
-	color: #fef01b;
+	color: #e8dd3c;
 	cursor: pointer;
 }
 
@@ -174,6 +174,7 @@
 .restaurants-info {
 	width: 50%;
 	border: 5px solid #9bb7d6;
+	margin-top:50px;
 }
 
 .restaurants-map {
@@ -191,11 +192,11 @@
 }
 
 .restaurants-info-head {
-	margin-top: 10px; 
-	display : flex;
+	margin-top: 20px;
+	display: flex;
 	flex-decoration: row;
 	width: 100%;
-	height: 60px;
+	height: 65px;
 }
 
 .restaurants-detail {
@@ -225,7 +226,7 @@
 }
 
 .restaurants-steamed {
-	width: 15%;
+	width : 15%;
 	margin-right: 10px;
 	text-align: right;
 }
@@ -478,7 +479,8 @@ a:active {
 }
 
 .restaurants_review_info_mainImage {
-	border: 3px solid #9bb7d6; width : 100%;
+	border: 3px solid #9bb7d6;
+	width: 100%;
 	height: 75%;
 	width: 100%;
 }
@@ -499,7 +501,8 @@ a:active {
 
 .restaurants_review_info_header {
 	display: flex;
-	flex-decoration: row; height : 20%;
+	flex-decoration: row;
+	height: 20%;
 	width: 100%;
 	padding-left: 20px;
 	height: 20%;
