--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -1,17 +1,32 @@
 @charset "UTF-8";
 
+@charset "UTF-8";
 /* 헤더 CSS */
 .HeaderContainer {
-	width: 90%;
+	padding-top:10px;
+	width: 100%;
 	margin: 0 auto;
-	height: 150px;
+	height: 180px;
+	display:flex;
+	flex-decoration:row;
 }
 
 .HeaderLogo {
-	display: inline-block;
+	@charset "UTF-8";
+/* 헤더 CSS */
+.HeaderContainer {
+	padding-top:10px;
+	width: 100%;
+	margin: 0 auto;
+	height: 180px;
+	display:flex;
+	flex-decoration:row;
+}
+
+.HeaderLogo {
+
 	width: 15%;
 	height: 80%;
-	position: relative;
 	left: 2%;
 	top: 5%;
 }
@@ -24,8 +39,6 @@
 .myMenu {
 	display: none;
 	width: 120px;
-	height: 135px;
-	position: absolute;
 	left: 200px;
 	border: 1px solid #9bb7d6;
 	margin: 0px;
@@ -35,22 +48,23 @@
 	list-style: none;
 	margin: 0px;
 	text-align: right;
+	
 }
 
 .search {
-	display: inline-block;
-	width: 70%;
-	height: 20%;
-	position: relative;
-	bottom: 25%;
-	left: 3%;
+	margin-top:50px;
+	margin:auto;
+	line-height: 85px;
+	width: 50%;
+
 }
 
 .searchbox {
 	width: 90%;
 	height: 100%;
+	font-size: 35px;
 	border-radius: 0.2em;
-	font-size: 15px;
+	border:1px solid black;
 }
 
 .searchBtn {
@@ -58,20 +72,83 @@
 	height: 100%;
 	background-color: #9bb7d6;
 	border-radius: 0.5em;
+	padding: 12px 0 6px 0;
+	margin-bottom : 5px;
 }
 
 .headerMenu {
-	display: inline-block;
-	position: relative;
-	bottom: 75%;
-	float: right;
+	margin-right:50px;
 	color: #9bb7d6;
 }
 
 .serchDTL {
-	display: inline-block;
-	position: relative;
-	float: left;
+	left: 18.5%;
+	bottom: 23%;
+}
+
+.searchDTLBTN {
+	height: 30px;
+	background-color: #9bb7d6;
+	border-radius: 0.5em;
+}
+/* 헤더 CSS 종료 */
+	width: 15%;
+	height: 80%;
+	left: 2%;
+	top: 5%;
+}
+
+.headerMenu a {
+	text-decoration: none;
+	color: #9bb7d6;
+}
+/* 마이메뉴css */
+.myMenu {
+	display: none;
+	width: 120px;
+	left: 200px;
+	border: 1px solid #9bb7d6;
+	margin: 0px;
+}
+
+.myMenu ul {
+	list-style: none;
+	margin: 0px;
+	text-align: right;
+	
+}
+
+.search {
+	margin-top:50px;
+	margin:auto;
+	line-height: 85px;
+	width: 50%;
+
+}
+
+.searchbox {
+	width: 90%;
+	height: 100%;
+	font-size: 35px;
+	border-radius: 0.2em;
+	border:1px solid black;
+}
+
+.searchBtn {
+	width: 38px;
+	height: 100%;
+	background-color: #9bb7d6;
+	border-radius: 0.5em;
+	padding: 12px 0 6px 0;
+	margin-bottom : 5px;
+}
+
+.headerMenu {
+	margin-right:50px;
+	color: #9bb7d6;
+}
+
+.serchDTL {
 	left: 18.5%;
 	bottom: 23%;
 }
@@ -765,7 +842,6 @@ a:active {
 /* list top 50 페이지 */
 .top50List {
 	margin: auto;
-	margin-top: 100px;
 	margin-bottom: 100px;
 }
 
@@ -928,18 +1004,16 @@ a:active {
 	width: 100%;
 	height: 100%;
 	margin: auto;
-	margin-top: 80px;
 }
 
 .swiper-container {
-	width: 40%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	margin: auto;
 	padding-top: 100px;
 }
 
 .swiper-slide-container {
-	margin-top: 200px;
 	text-align: center;
 	font-size: 18px;
 	background: #fff;
@@ -964,8 +1038,11 @@ a:active {
 	height: 80%;
 	width: 80%;
 }
-
-.swiper-slide {
-	width: 1000px;
+.plus-imgList{
+	width: 50%;
+	height: 100%;
+	margin-bottom:120px;
 }
+
+
 /* photo more 팝업창 css 종*/
